# MFRP

./: MFRP_CODE_BUNDLE.b64  MFRP_CODE_BUNDLE.txt  MFRP_IMPLEMENTATION_AUDIT.md  MFRP_OPTIMIZATION_REPORT.md  MFRP_PATCH_NOTES.md  README.md  RUN_RECOMMENDED_MFRP.md  interactive planning (17).tex  pyproject.toml  read_files.py  代码修改.md
configs/data/: mfrp_womd_waymax.yaml
configs/eval/: mfrp_eval.yaml
configs/model/: mfrp_full.yaml
configs/recommended/: full_pipeline.yaml
configs/train/: mfrp_train.yaml
debug_legacy_scope/: IMPLEMENTATION_REPORT_SCOPE.md  womd_waymax.yaml
debug_legacy_scope/configs_experiment/: closed_loop.yaml
examples/: mfrp_waymax_adapter.py  mfrp_waymax_adapter_template.py
mfrp/data/: __init__.py  interaction_region.py  label_extraction.py  materialize.py  priority.py  scene_schema.py  schema.py  support_query.py  tensors.py
mfrp/evaluation/: __init__.py  metrics.py  runtime.py
mfrp/models/: __init__.py  coercion_witness.py  mechanism_operator.py  mfrp_model.py  response_heads.py  support_encoder.py
mfrp/planning/: __init__.py  calibration.py  deploy.py  estimators.py  selector.py
mfrp/training/: __init__.py  losses.py
scripts/: build_same_root_dataset.py  calibrate_mfrp.py  compute_scales.py  deploy_mfrp.py  diagnose_dataset.py  eval_mfrp.py  train_mfrp.py
tests/: test_mfrp_audit_regressions.py  test_mfrp_deploy.py  test_mfrp_no_leakage_pipeline.py  test_mfrp_patch_extensions.py  test_mfrp_planning.py  test_mfrp_schema_labels.py  test_mfrp_support_model_loss.py  test_smoke.py
