[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfrp"
version = "0.2.0"
description = "Mechanism-Feasible Response Planning reference implementation"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "PyYAML>=6.0", "torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
waymax = ["waymax", "tensorflow"]

[tool.setuptools.packages.find]
include = ["mfrp*", "scripts*"]
